<resources>
    <string name="app_name">GradesApp</string>
    <string name="action_settings">Settings</string>
    <string name="login_button">Login</string>
    <string name="create_accButton">Create Account</string>
    <string name="user_name">Username</string>
    <string name="user_password">Password</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="addCourseTitle">"Add A Course"</string>
    <string name="courseID">ID</string>
    <string name="courseTitle">Course Name</string>
    <string name="courseInstructor">Instructor</string>
    <string name="courseDescription">Description</string>
    <string name="courseStart">Start Date</string>
    <string name="courseEnd">End Date</string>
    <string name="cancel_button">Cancel</string>
    <string name="add_button">Add</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="userCredentials">User Credentials</string>
    <string name="confirmButton">Confirm</string>
</resources>
